--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<script src="https://kit.fontawesome.com/4b351e3c50.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/dest/style.css">
 </head>
 
