--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script src="https://kit.fontawesome.com/4b351e3c50.js" crossorigin="anonymous"></script>
+	<title>Переимнеовать</title>
+	<!-- <script src="https://kit.fontawesome.com/4b351e3c50.js" crossorigin="anonymous"></script> -->
 	<link rel="stylesheet" href="css/dest/style.css">
 </head>
 
 <body>
-	
 	<script src="js/dest/script.js"></script>
 </body>
 
